--- a/index.html
+++ b/index.html
@@ -14,34 +14,33 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 </head>
 <body>
-
-<nav class="navbar navbar-inverse navbar-fixed-top nav-design">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand logo" href="#">CapFort</a>
+  <nav class="navbar navbar-inverse navbar-fixed-top ">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>                        
+        </button>
+        <a class="navbar-brand" href="#">CapFort</a>
+      </div>
+      <div class="collapse navbar-collapse" id="myNavbar">      
+        <ul class="nav navbar-nav navbar-right">
+           <li class="active"><a href="#">About</a></li>
+          <li><a href="#">Investments</a></li>
+          <li><a href="#">Team</a></li>
+          <li><a href="#">Writing</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right list-style">
-        <li class="active"><a href="#">About</a></li>
-        <li><a href="#">Investments</a></li>
-        <li><a href="#">Team</a></li>
-        <li><a href="#">Writing</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
+  </nav>
 <!-- banner start-->
 <div class="container-fluid background">
 <div class="row">
   <div class="col-lg-12 ">
     <div class="col-lg-4 col-sm-12 text">
-      <h1>WE BACK<br><span class="sayan">FOUNDERS</span> BUILDING THE <span class="sayan"> FUTURE</span> OF <span class="sayan">INDIA.</span> </h1>
+      <h1>WE BACK <span class="sayan">FOUNDERS</span> BUILDING THE <span class="sayan"> FUTURE</span> OF <span class="sayan">INDIA.</span> </h1>
     </div>
     <div class="col-lg-8 col-sm-12">
       <video width="700px" height="900px"  autoplay muted loop >
@@ -116,5 +115,3 @@
 </div>
 </body>
 </html>
-
-
