--- a/index.html
+++ b/index.html
@@ -26,30 +26,30 @@
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">      
         <ul class="nav navbar-nav navbar-right">
-           <li class="active"><a href="#">About</a></li>
+           <li class=""><a href="#about">About</a></li>
           <li><a href="#">Investments</a></li>
           <li><a href="#">Team</a></li>
           <li><a href="#">Writing</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </div>
     </div>
   </nav>
 <!-- banner start-->
-<div class="container-fluid background">
+<div class="container-fluid background" >
 <div class="row">
   <div class="col-lg-12 ">
     <div class="col-lg-4 col-sm-12 text">
       <h1>WE BACK <span class="sayan">FOUNDERS</span> BUILDING THE <span class="sayan"> FUTURE</span> OF <span class="sayan">INDIA.</span> </h1>
     </div>
     <div class="col-lg-8 col-sm-12">
-      <video width="700px" height="900px"  autoplay muted loop >
+      <video  autoplay muted loop >
         <source src="image/capfortbanner_desktop.webm" type="video/webm"/>
     </video>
     </div>
   </div>
 </div>
-<div class="row">
+<div class="row" id="about">
 <div class="col-lg-12 background">
   <div class="col-lg-6 img">
     <img src="image/about-img.webp" alt="">
@@ -101,7 +101,7 @@
 </div>
 </div>
 <!-- footer section -->
-<div class="row">
+<div class="row" id="contact">
   <div class="col-lg-12 footer-design"> 
 <footer>
         <span class="fa fa-instagram"></span>
